Issues/IF-10 Article list issues: IF-128 :: The gap should be 16 px between 2 article cards resolved.

--- a/wp-content/themes/fr-starter-theme/resources/styles/modules/_article-list.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/modules/_article-list.scss
@@ -9,7 +9,7 @@
     .full-content{
         box-shadow: 0 2px 10px 0 rgba(82,87,103,0.2);
         padding: 40px 28px;
-        margin-bottom: 18px; 
+        margin-bottom: 16px; 
         border-radius: 8px;
         .more-less{
             border: none;
